--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Inz</string>
+    <string name="app_name">PoDust</string>
     <string name="title_activity_maps">Map</string>
 
     <string name="start">START</string>
